--- a/idgenerator.html
+++ b/idgenerator.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <input placeholder="enter your name" />
+        <input placeholder="Full name" />
+        <input placeholder="Age" />
+        <input placeholder="Gender" />
+        <input placeholder="Address" />
+        <input placeholder="State" />
+        <input placeholder="Mobile number" />
         <button onclick="getUser()">Submit</button>
     </div>
 
