able to get multiple input values

--- a/idgenerator.html
+++ b/idgenerator.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <input placeholder="Full name" />
-        <input placeholder="Age" />
-        <input placeholder="Gender" />
-        <input placeholder="Address" />
-        <input placeholder="State" />
-        <input placeholder="Mobile number" />
-        <button onclick="getUser()">Submit</button>
+        <input id = "fullName" placeholder="Full name" />
+        <input id = "age" type = "number" placeholder="Age" />
+        <input id = "gender" type = "text" placeholder="Gender" />
+        <input id = "address" type = "text" placeholder="Address" />
+        <input id = "state" type = "text" placeholder="State" />
+        <input id = "mobile" type = "text" placeholder="Mobile number" />
+        <button type="submit" value="Submit" onclick="getUser()">Submit</button>
     </div>
 
     <div id="generatedId">
