updated the files

--- a/idgenerator.html
+++ b/idgenerator.html
@@ -19,7 +19,8 @@
     </div>
 
     <div id="generatedId">
-
+<li>desire</li>
+<li>athar</li>
     </div>
     <script src="./idgenerate.js"></script>
 </body>
