--- a/idgenerator.html
+++ b/idgenerator.html
@@ -18,7 +18,16 @@
         <button type="submit" value="Submit" onclick="getUser()">Submit</button>
     </div>
 
-    <div id="generatedId">
+    <ul class="lists">
+
+    </ul>
+  
+    <template id="template">
+          <li class="template-list">
+              <p class="template-city"></p>
+              <p class="template-country"></p>
+          </li>
+      </template>
 <li>desire</li>
 <li>athar</li>
     </div>
