able to generate different id numbers

--- a/idgenerator.html
+++ b/idgenerator.html
@@ -27,6 +27,7 @@
             <th>State</th>
             <th>Mobile Number</th>
             <th>Id</th>
+            <th>Action</th>
           </tr>
     </table>
   
@@ -39,6 +40,7 @@
               <td class="template-state"></td>
               <td class="template-mobile"></td>
               <td class="template-uniqueId"></td>
+              <td class="delete">X</td>
             </tr>
             
            
