modifield the files

--- a/idgenerator.html
+++ b/idgenerator.html
@@ -12,7 +12,10 @@
     <div class="container" >
         <input id = "fullName" placeholder="Full name" />
         <input id = "age" type = "number" placeholder="Age" />
-        <input id = "gender" type = "text" placeholder="Gender" />
+        <select id = "gender" name="male" >
+          <option id = "gender"">Male</option>
+          <option id = "gender">Female</option>
+        </select>
         <input id = "address" type = "text" placeholder="Address" />
         <input id = "state" type = "text" placeholder="State" />
         <input id = "mobile" type = "text" placeholder="Mobile number" />
