added validation to the input fields

--- a/idgenerator.html
+++ b/idgenerator.html
@@ -10,15 +10,15 @@
 <body>
  <h1>Id generator project</h1>
     <div class="container" >
-        <input id = "fullName" placeholder="Full name" />
-        <input id = "age" type = "number" placeholder="Age" />
+        <input id = "fullName" placeholder="Full name" required />
+        <input id = "age" type = "number" placeholder="Age" required />
         <select id = "gender" name="male" >
           <option id = "gender"">Male</option>
           <option id = "gender">Female</option>
         </select>
-        <input id = "address" type = "text" placeholder="Address" />
-        <input id = "state" type = "text" placeholder="State" />
-        <input id = "mobile" type = "text" placeholder="Mobile number" />
+        <input id = "address" type = "text" placeholder="Address" required />
+        <input id = "state" type = "text" placeholder="State"  required/>
+        <input id = "mobile" type = "text" placeholder="Mobile number" required />
         <button type="submit" value="Submit" onclick="getUser()">Submit</button>
     </div>
 
